--- a/app/static/index.html
+++ b/app/static/index.html
@@ -190,7 +190,7 @@
 
         <div class="panel chosun-panel">
             <div class="panel-header">
-                조선 모델 응답
+                🇰🇷 조선 시대 🇰🇷
             </div>
             <div class="panel-content" id="secondaryOutput">
                 <span style="color: #5c5f66;">Response will appear here...</span>
@@ -220,9 +220,6 @@
                 alert('Please enter a valid max token value (positive integer).');
                 return;
             }
-            const endpointWithGenerate = endpoint.endsWith('/generate')
-                ? endpoint
-                : (endpoint.endsWith('/') ? endpoint + 'generate' : endpoint + '/generate');
 
             // UI Loading State
             btn.disabled = true;
@@ -237,7 +234,7 @@
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({
-                        endpoint_url: endpointWithGenerate,
+                        endpoint_url: endpoint,
                         prompt: prompt,
                         max_new_tokens: maxTokens
                     })
